@@ -3,6 +3,7 @@
   * add global conda lock file for only allowing one instance of conda
     to run at the same time
   * add conda skeleton command to create recipes from PyPI
+  * add ability to run post-link and pre-unlink script
 
 
 2013-06-13   1.7.0a1:
